--- a/cookie_policy.html
+++ b/cookie_policy.html
@@ -2,51 +2,90 @@
 
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>The Long 18th Century</title>
-	<link rel="stylesheet" href="styles/normalize.css">
-	<link rel="stylesheet" href="styles/main.css">
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="icon" type="image/gif" href="images/animated_favicon1.gif">
+	<link rel="stylesheet" href="/18thcentury/styles/normalize.css">
+	<link rel="stylesheet" href="/18thcentury/styles/main.css">
+	<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+	<link rel="shortcut icon" href="/18thcentury/images/favicon.ico">
 </head>
 
 <body>
-  <header>
-    <h2 id="header"><a href="index.php">The Long 18th Century</a></h2>
-	<script>
-	window.onscroll = function() {scrollFunction()};
-
-	function scrollFunction() {
-	if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
-		document.getElementById("header").style.fontSize = "30px";
-	} else {
-		document.getElementById("header").style.fontSize = "70px";
-	}
-	}
-	</script>
-	<h3><center>The European Era of <a href="/project/nations_empires.php">Empire</a> and <a href="/project/science_movements.php#science_movements_home">Enlightenment</a></center></h3>
+	<header>
+		<p><nav id="topbar">
+		<ul>
+		<li><a href="/18thcentury/nations.php">Nations</a></li>
+		<li><a href="/18thcentury/conflicts.php">Conflicts</a></li>
+		<li><a href="/18thcentury/index.php" class="current">Long 18th Century</a></li>
+		<li><a href="/18thcentury/science.php">Science</a></li>
+		<li><a href="/18thcentury/profile.php">Profile</a><br></li>
+		</ul></nav></p><br><br><br> <!-- <br> is needed to keep topbar visible -->
+	  <script>
+		window.onscroll = function() {scrollFunction()};
+		function scrollFunction() {
+			if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
+				if (window.screen.availWidth < 400) {
+					document.getElementById("topbar").style.fontSize = "70%";
+				} else if (window.screen.availWidth < 615) {
+					document.getElementById("topbar").style.fontSize = "100%";
+				} else if (window.screen.availWidth < 640) {
+					document.getElementById("topbar").style.fontSize = "115%";
+				} else if (window.screen.availWidth < 1000) {
+					document.getElementById("topbar").style.fontSize = "130%";
+				} else if (window.screen.availWidth < 1200) {
+					document.getElementById("topbar").style.fontSize = "150%";
+				} else {
+					document.getElementById("topbar").style.fontSize = "150%";
+				}
+			}
+			else {
+				if (window.screen.availWidth < 400) {
+					document.getElementById("topbar").style.fontSize = "80%";
+				} else if (window.screen.availWidth < 615) {
+					document.getElementById("topbar").style.fontSize = "110%";
+				} else if (window.screen.availWidth < 640) {
+					document.getElementById("topbar").style.fontSize = "130%";
+				} else if (window.screen.availWidth < 1000) {
+					document.getElementById("topbar").style.fontSize = "135%";
+				} else if (window.screen.availWidth < 1200) {
+					document.getElementById("topbar").style.fontSize = "160%";
+				} else {
+					document.getElementById("topbar").style.fontSize = "160%";
+				}
+			}
+		}
+		</script>
+		<h3 id="europeanSentence">The European Era of <a href="/18thcentury/nations.php">Empire</a> and <a href="/18thcentury/science.php">Enlightenment</a></h3>
   </header>
- <p>
-  <nav id="topbar">
-  <ul>
-	<li><a href="index.php" class="current">Home - Introduction</a></li>
-	<li><a href="nations_empires.php">Nations | Empires</a></li>
-	<li><a href="piracy_conflicts.php">Piracy | Conflicts</a></li>
-	<li><a href="science_movements.php">Science | Movements</a></li>
-	<li><a href="profile.php">Profile</a><br></li>
-  </ul></p><br><br><br>
-  </nav>
 
   <main>
-    <h1><center id="home">Cookie Policy<center></h1>
-	<h3>This website only stores your acknowledgement of the cooky policy popup and username after registeration or login for the purpose of registering the owners of all submitted articles, entries, and references.</h3>
-	<h3>These cookies expire after closing out your web browser. If you do not agree to this policy, please refrain from using this website.</h3>
-	<h3>Aside from displaying who creates or edits an article, entry, or reference - all submitted information is kept secured outside the website for your privacy.</h3>
-    </aside>
+    <h1 id="home">Cookie Policy</h1>
+		<h3>This website only stores your acknowledgement of the cooky policy popup and username after registration or login for the purpose of registering the owners of all submitted articles, entries, and references.</h3>
+		<h3>These cookies expire after closing out a full 24 hours has passed, but they can also be deleted from your browser if preferred.
+			Aside from displaying who creates or edits an article, entry, or reference - all submitted information is kept secured outside the website for your privacy.</h3>
+		<h3>If you do not agree to this policy, please refrain from using this website.</h3>
+
+		<!-- Flickity HTML init -->
+		<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+		<!-- z-index represents the stack order of one element over the other. "-1" makes this element underlap the cookie popup for this situation if used! -->
+		<div class="carousel" style="z-index: -1;"
+	  data-flickity='{ "imagesLoaded": true, "percentPosition": false, "autoPlay": 4500,
+		"cellAlign": "left", "wrapAround": true, "pageDots": false, "prevNextButtons": false }'>
+			<img src="./images/index_slider/marie_gabrielle_PORTRAIT.jpg" alt="Portrait of Marie Gabrielle" />
+		  <img src="./images/index_slider/foundingofaustralia.jpg" alt="The first British colony of Australia" />
+		  <img src="./images/index_slider/napoleon_bridge.jpg" alt="Napoleon at the Battle of Arcole" />
+			<img src="./images/index_slider/the_proposal.jpg" alt="The Proposal" />
+			<img src="./images/index_slider/siege_of_pensacola.jpg" alt="The Siege of Pensacola" />
+		  <img src="./images/index_slider/hmscharlotte.jpg" alt="Lord Howe on the desk of HMS Queen Charlotte" />
+		</div>
   </main>
 
-  <footer>
-	<p></p>
+	<footer>
+		<table style="margin-left: auto; margin-right: auto; border-spacing: 10px; border-collapse: separate">
+			<tr><td><a href="/18thcentury/cookie_policy.html">Cookie Policy</a></td>
+			<td><a href="/18thcentury/contact.php">Contact</a></td></tr>
+		</table>
   </footer>
-</body>\
+</body>
 </html>
