Fixed Sentence Structure in Cookie Policy

--- a/cookie_policy.html
+++ b/cookie_policy.html
@@ -62,7 +62,7 @@
   <main>
     <h1 id="home">Cookie Policy</h1>
 		<h3>This website only stores your acknowledgement of the cooky policy popup and username after registration or login for the purpose of registering the owners of all submitted articles, entries, and references.</h3>
-		<h3>These cookies expire after closing out a full 24 hours has passed, but they can also be deleted from your browser if preferred.
+		<h3>These cookies expire after a full 24 hours has passed, but they can also be deleted from your browser if preferred.
 			Aside from displaying who creates or edits an article, entry, or reference - all submitted information is kept secured outside the website for your privacy.</h3>
 		<h3>If you do not agree to this policy, please refrain from using this website.</h3>
 
